@@ -6,6 +6,7 @@ export(plotColGraph)
 export(plotColTile)
 export(plotDMNFit)
 export(plotFeaturePrevalence)
+export(plotHistogram)
 export(plotLoadings)
 export(plotMediation)
 export(plotNMDS)
@@ -31,6 +32,7 @@ exportMethods(plotColTile)
 exportMethods(plotColTree)
 exportMethods(plotDMNFit)
 exportMethods(plotFeaturePrevalence)
+exportMethods(plotHistogram)
 exportMethods(plotLoadings)
 exportMethods(plotMediation)
 exportMethods(plotPrevalence)
