@@ -40,3 +40,4 @@ Changes in version 1.15.x
 + plotRDA: Now it is possible to add only specified vectors
 + plotMediation: Method to visualise results of mediation analysis
 + plotRDA: Fix error that occurred when variable names were similar
++ Added plotHistogram
